--- a/MVCMuncheese/Views/Perfiles/listarPerfiles_PA.cshtml
+++ b/MVCMuncheese/Views/Perfiles/listarPerfiles_PA.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Entidades.recPerfiles_Result>
+﻿@model IEnumerable<MVCMuncheese.Models.modeloPerfiles>
 
 @{
     ViewBag.Title = "listarPerfiles_PA";
