--- a/MVCMuncheese/Views/Proveedores/listarProveedores_PA.cshtml
+++ b/MVCMuncheese/Views/Proveedores/listarProveedores_PA.cshtml
@@ -1,6 +1,5 @@
-﻿@model IEnumerable<Entidades.recProveedor_Result>
+﻿@model IEnumerable<MVCMuncheese.Models.modeloProveedores>
 
-@{
     ViewBag.Title = "listarProveedores_PA";
 }
 
