--- a/MVCMuncheese/Views/Usuarios/detalleUsuarios_PA.cshtml
+++ b/MVCMuncheese/Views/Usuarios/detalleUsuarios_PA.cshtml
@@ -26,11 +26,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Estado)
+            @Html.DisplayNameFor(model => model.NombreEstado)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Estado)
+            @Html.DisplayFor(model => model.NombreEstado)
         </dd>
 
     </dl>
