--- a/MVCMuncheese/Views/Login/errorPass.cshtml
+++ b/MVCMuncheese/Views/Login/errorPass.cshtml
@@ -10,7 +10,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1>Sistema ABCD</h1>
+                <h1>Sistema SFMFT</h1>
             </div>
             <span style="color: white; font-size:14px; margin-left:10px;">
                 <img class="manImg" src="~/Img/oops.jpg" height="50" width="50">
