--- a/MVCMuncheese/Views/Home/Contact.cshtml
+++ b/MVCMuncheese/Views/Home/Contact.cshtml
@@ -1,17 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Ayuda";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2 style="text-align:center">@ViewBag.Title.</h2>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+<!-- Agregar el enlace al archivo PDF aquí -->
+<div class="col-md-12" style="text-align:center">
+    <a href="@ViewBag.PdfPath" target="_blank"><img src="@ViewBag.IconPath" alt="Manual de usuario" style="width: 20px; height: 20px; vertical-align: middle;" /> Manual de usuario</a>
+</div>
