--- a/MVCMuncheese/Views/Shared/_Layout.cshtml
+++ b/MVCMuncheese/Views/Shared/_Layout.cshtml
@@ -76,9 +76,6 @@
                                 <li>@Html.ActionLink("Productos", "listarProductos_ENT", "Productos")</li>
                                 <li>@Html.ActionLink("Estados", "listarEstado_PA", "Estado")</li>
                                 <li>@Html.ActionLink("Mesas", "listarMesas_PA", "Mesas")</li>
-                                <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
-                                <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
-                                <li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>
                                 <li>@Html.ActionLink("Clientes", "listarClientes_ENT", "Clientes")</li>
                                 <li>@Html.ActionLink("Proveedores", "listarProveedores_PA", "Proveedores")</li>
                                 <li>@Html.ActionLink("Perfiles", "listarPerfiles_PA", "Perfiles")</li>
@@ -90,12 +87,18 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Reportes<span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>
                                 <li>@Html.ActionLink("DetalleOrden", "listarDetalleOrden_PA", "DetalleOrden")</li>
-                                <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
+                                <li>@Html.ActionLink("Inventario", "listarInventario_PA", "Inventario")</li>
                             </ul>
                         </li>
 
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Botacoras<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink("Facturas", "listarFacturas_PA", "Facturas")</li>
+                                <li>@Html.ActionLink("Ordenes", "listarOrdenes_PA", "Ordenes")</li>
+                            </ul>
+                        </li>
 
                         if (Convert.ToBoolean(Session["blnMantenimiento"]))
                         {
@@ -217,7 +220,7 @@
                     @if (Convert.ToBoolean(Session["Logueado"]))
                     {
                         <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                        <li>@Html.ActionLink("Ayuda", "Index", "Home")</li>
+                        <li>@Html.ActionLink("Ayuda", "Contact", "Home")</li>
                         <li>@Html.ActionLink("Salir", "cerrarSesion", "Home")</li>
                     }
                 </ul>
